// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.html - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["html"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- @prettier -->

Hello        World

=====================================output=====================================
<!-- @prettier -->

Hello World

================================================================================
`;

exports[`without-pragma.html - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["html"]
                                                      printWidth: 80 (default) |
=====================================input======================================
Hello        World

=====================================output=====================================
<!-- @format -->

Hello World

================================================================================
`;
